--- a/package.json
+++ b/package.json
@@ -22,24 +22,27 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.1",
     "gatsby": "^4.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.14.0",
     "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-sass": "^5.16.0",
     "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
     "gatsby-source-github-api": "^1.0.0",
     "gatsby-transformer-json": "^4.14.0",
+    "gatsby-transformer-remark": "^5.16.0",
     "gatsby-transformer-sharp": "^4.14.0",
+    "gsap": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
+    "sass": "^1.52.2",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.3.4"
   },
@@ -50,6 +53,9 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.25",
+    "stylelint": "^14.9.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^4.0.0",
     "typescript": "^4.6.4"
   },
   "repository": {
